# VMF-to-PBR

./: .gitignore  Cargo.toml  README.md
in-game-debug/: Cargo.toml
in-game-debug/crates/custom_windows/: Cargo.toml
in-game-debug/crates/custom_windows/src/: lib.rs
in-game-debug/crates/custom_windows/src/pbr_debug/: mod.rs  types.rs
in-game-debug/crates/egui_backend/src/: texman.rs
src/: constants.rs  generator.rs  lib.rs  main.rs  math.rs  nut_gen.rs  parser.rs  types.rs  vmf_parser.rs  vtf_writer.rs
src/generators/: mod.rs  vmt_patch.rs  vscript.rs  vtf_lut.rs
src/processing/: cubemaps.rs  dynamic.rs  geometry.rs  mod.rs  scoring.rs  surface_wrappers.rs  tracer.rs  utils.rs
src/utils/: math.rs  mod.rs  nut_writer.rs  text.rs  vmt_helper.rs
